--- a/public/style/main.css
+++ b/public/style/main.css
@@ -14,11 +14,66 @@
 */
 
 
+
+/* FONTS */
+
+@font-face {
+    font-family: 'Tron';
+    src: url('../fonts/Tron.ttf');
+}
+
+
+@font-face {
+    font-family: 'Abnes';
+    src: url('../fonts/abnes.ttf');
+}
+
+
+@font-face {
+    font-family: 'Eva';
+    src: url('../fonts/eva.TTF');
+}
+
+
+@font-face {
+    font-family: 'Hollowed';
+    src: url('../fonts/hybrid_o.ttf');
+}
+
+
+@font-face {
+    font-family: 'Space';
+    src: url('../fonts/space_age.ttf');
+}
+
+
+@font-face {
+    font-family: 'Tiesto';
+    src: url('../fonts/Tiesto.ttf');
+}
+
+
+@font-face {
+    font-family: 'Readable';
+    src: url('../fonts/readable.otf');
+}
+
+@font-face {
+    font-family: 'Readable2';
+    src: url('../fonts/readable_2.ttf');
+}
+
+
+
+
+/* CSS RESET */
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     cursor: default;
+    font-family: Abnes;
 }
 p, input, textarea {
     cursor: text;
@@ -29,8 +84,12 @@ a {
     color:rgb(65, 212, 50);
     font-weight: bolder;
 }
+button {
+    cursor: pointer;
+}
 body {
-    color: lightskyblue;
+    color: rgb(7, 212, 255);
+    background-color: #222;
 }
 
 
@@ -50,8 +109,8 @@ body {
 #coreContainerBackground img {
     /* max-width: 80%;
     max-height: 80%; */
-    filter: drop-shadow(0 0 10px lightskyblue);
-    filter: drop-shadow(0 24px 8px rgb(34, 77, 102));
+    filter: drop-shadow(0 0 10px rgb(7, 212, 255));
+    /* filter: drop-shadow(0 24px 8px rgb(34, 77, 102)); */
 }
 #coreContainer {
     position: fixed;
@@ -63,27 +122,51 @@ body {
     backdrop-filter: blur(4px);
     /* TEMP STYLE */
     display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    padding-top: 5rem;
-    font-size: 1.5rem;
+    flex-direction: column;
+    width: 100%;
+    max-width: 100vw;
+    align-items: center;
+    justify-content: flex-start;
+    padding-top: 1rem;
+    font-size: 1rem;
     text-shadow: 0 1px 2px #00000080;
     text-align: center;
     line-height: 3rem;
+    overflow-y: auto;
 }
 
 
 .device-orientation-portrait {
-    background-color: rgba(255, 255, 255, 0.5);
+    /* background-color: rgba(255, 255, 255, 0.5); */
+    /* background-color: rgba(0, 0, 0, 0.5); */
 }
 .device-orientation-landscape {
     background-color: rgba(0, 0, 0, 0.5);
 }
 
 
+.site-header {
+    background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: 0 10px 8px rgba(0, 0, 0, 0.25);
+    margin-bottom: 3rem;
+    padding: 1rem;
+    border-radius: 2rem;
+}
 
-
-
+.site-link {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.site-link img {
+    max-width: 25px;
+}
+.site-link a {
+    font-size: 0.75rem;
+    line-height: 0.75rem;
+}
 
 /* Main Menu */
 .main-menu-container {
@@ -125,10 +208,10 @@ body {
     margin: -75px 0 0 -75px;
     border-radius: 50%;
     background: rgb(211 238 255 / 50%);
-    background: rgb(211, 238, 255);
+    background: rgb(28, 28, 28);
     
     box-shadow: 0 -10px 12px rgba(0, 0, 0, 0.25);
-    border: solid 1px lightskyblue;
+    border: solid 1px rgb(7, 212, 255);
     background-size: 100%;
     overflow: hidden;
     text-decoration: none;
@@ -136,7 +219,7 @@ body {
 }
 .menu-is-open {
     background-color: #202b33;
-    box-shadow: 0 0 12px lightskyblue, inset 0 0 10px lightskyblue, inset 0 0 20px rgba(255, 0, 0, 1);
+    box-shadow: 0 0 12px rgb(7, 212, 255), inset 0 0 10px rgb(7, 212, 255), inset 0 0 20px rgba(255, 0, 0, 1);
 }
 #menu:not(:target)>a:first-of-type,
 #menu:target>a:last-of-type {
@@ -158,7 +241,8 @@ body {
     top: 50%;
     margin: -25px 0 0 -50px;
     border-radius: 50%;
-    background-color: rgba(175, 223, 255, 0.25);
+    background-color: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(4px);
     transform: translate(0px, 0px);
     transition: transform 500ms;
     z-index: -2;
@@ -166,7 +250,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 0 -10px 12px rgba(0, 0, 0, 0.25), inset 0 0 20px lightskyblue;
+    box-shadow: 0 -10px 12px rgba(0, 0, 0, 0.25), inset 0 0 20px rgb(7, 212, 255);
     border: solid 1px rgba(135, 206, 250, 0.541);
     transition: all 250ms;
 }
@@ -215,6 +299,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    filter: drop-shadow(0 0 5px rgba(7, 212, 255, 0.5));
 }
 
 .menu-item-icon img {
@@ -230,8 +315,8 @@ body {
 }
 
 .current-menu-item {
-    box-shadow: 0 0 20px lightskyblue, inset 0 0 50px lightskyblue;
-    border: solid 1px lightskyblue;
+    box-shadow: 0 0 20px rgb(7, 212, 255), inset 0 0 50px rgb(7, 212, 255);
+    border: solid 1px rgb(7, 212, 255);
 }
 
 #pageMenu {
@@ -265,7 +350,7 @@ body {
 
 .page-menu-title {
     color: #fff;
-    font-size: 3rem;
+    font-size: 1.5rem;
     font-weight: bolder;
     padding: 1rem;
     border-bottom: solid 3px #fff;
@@ -287,14 +372,14 @@ body {
     border-radius: 0.5rem;
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
-    font-size: 2rem;
+    font-size: 1rem;
     width: 90%;
     /* border-bottom: solid 1px #fff; */
 }
 
 .page-menu-item a {
     text-decoration: none;
-    color: lightskyblue;
+    color: rgb(7, 212, 255);
     text-shadow: 0 0 2px #fff;
 }
 
@@ -320,6 +405,7 @@ body {
     max-width: 50px;
     max-height: 50px;
     width: 50px;
+    filter: drop-shadow(0 0 2px red);
 }
 .home-button-data p {
     cursor: pointer;
@@ -334,14 +420,28 @@ body {
 
     font-weight: bolder;
 }
+
+
+
+
+.switch-readablity-button {
+    background-color: rgb(255, 177, 22);
+    border-radius: 1rem;
+    padding: 0.5rem;
+    outline: none;
+    color: #fff;
+    border: none;
+}
+
+
+
 /* PAGE STYLE */
 .page {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    min-height: 100dvh;
-    padding-bottom: 125px;
+    padding-bottom: 150px;
 }
 
 
@@ -353,7 +453,7 @@ body {
 .page-title {
 }
 .page-title h1 {
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin-top: 1rem;
 }
 .page-body {
@@ -365,18 +465,18 @@ body {
     width: 100%;
 }
 .page-section {
-    padding: 1rem;
-    width: 100%;
+    width: calc(100% - 2rem);
 }
 
 .page-section-header {
 }
 .page-section-header h3 {
-    font-size: 1.75rem;
+    font-size: 1rem;
     text-align: center;
 }    
 .page-section-body {
     padding: 1rem;
+    padding-top: 2rem;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -384,16 +484,59 @@ body {
     justify-content: space-evenly;
     gap: 1rem;
     max-width: 100%;
+    border-top: solid 3px rgb(7, 212, 255);
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    position: relative;
     
 }
 
-.page-subsection {
-    background-color: #ccccccbe;
-    padding: 1rem;
+.page-section-image, .page-section-video, .page-section-audio {
+    max-width: 90%;
+    height: 300px;
+    padding: 10px;
     border-radius: 1rem;
-    width: 350px;
-    max-width: 100%;
+}
 
+.page-section-image {
+    box-shadow: inset 0 0 10px rgb(221, 70, 176);
+}
+.page-section-video {
+    box-shadow: inset 0 0 10px rgb(228, 230, 55);
+}
+.page-section-audio {
+    box-shadow: inset 0 0 10px rgb(218, 66, 69);
+}
+
+.page-section-image img, .page-section-video video {
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 1rem;
+}
+
+
+.page-section-body::after {
+    content: '';
+    width: 100%;
+    height: 20px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    box-shadow: inset 0 10px 5px rgba(7, 214, 255, 0.15), inset 0 4px 2px rgba(7, 214, 255, 0.25), 0 -8px 6px rgba(7, 214, 255, 0.25);
+}
+
+.page-subsection {
+    background-color: #393939be;
+    box-shadow: inset 0 0 12px rgba(7, 214, 255, 0.5);
+    border: solid 1px rgb(7, 212, 255);
+    padding: 1rem;
+    padding-bottom: 2.5rem;
+    border-radius: 1rem;
+    width: 100%;
+    max-width: 850px;
+    backdrop-filter: blur(4px);
 }
 .page-subsection-header {
     margin-bottom: 1rem;
@@ -402,7 +545,30 @@ body {
 .page-subsection-header h5 {
     text-align: center;
     font-size: 1.25rem;
-    font-weight: bolder;
+    /* font-weight: bold; */
+    font-family: Readable;
+    /* letter-spacing: 0.05rem; */
+}
+.page-subsection p {
+    font-family: Readable;
+    font-size: 1rem;
+    line-height: 1.25rem;
+    margin-bottom: 2.5rem;
+}
+.dotted-list {
+    list-style: circle;
+    width: 60%;
+    margin-inline: auto;
+}
+.dotted-list li {
+    padding: 0.5rem;
+    font-family: Readable;
+    font-size: 1rem;
+    line-height: 1.25rem;
+    text-align: left;
+}
+.dotted-list li::marker {
+    color: rgb(65, 212, 50);
 }
 .json-schema>ul {
     list-style: none;
