--- a/public/style/main.css
+++ b/public/style/main.css
@@ -536,8 +536,19 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
+.storyboard::before {
+    content: '\2B50';
+    color: rgba(227, 230, 55, 0.75);
+    text-shadow: 0 0 2px rgb(228, 230, 55);
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    top: 5px;
+    right: 15px;
+}
 .page-section-image {
     box-shadow: inset 0 0 10px rgb(221, 70, 176);
     border: solid 1px rgb(221, 70, 176);
@@ -579,7 +590,7 @@ body {
     padding-bottom: 2.5rem;
     border-radius: 1rem;
     width: 100%;
-    max-width: 850px;
+    max-width: 1050px;
     backdrop-filter: blur(4px);
 }
 .page-subsection-header {
@@ -588,7 +599,8 @@ body {
 
 .page-subsection-header h5 {
     text-align: center;
-    font-size: 1.25rem;
+    font-size: 1.5rem;
+    margin-top: 2rem;
     /* font-weight: bold; */
     font-family: Readable;
     /* letter-spacing: 0.05rem; */
@@ -596,7 +608,7 @@ body {
 .page-subsection p {
     font-family: Readable;
     font-size: 1rem;
-    line-height: 1.25rem;
+    line-height: 1.5rem;
     margin-bottom: 2.5rem;
 }
 .dotted-list {
