--- a/public/style/guide-book.css
+++ b/public/style/guide-book.css
@@ -143,6 +143,10 @@
 .table-of-contents-topic li::marker {
     color: rgb(255, 177, 22);
 }
+
+.drop-down-header, .drop-down-sub-header {
+    cursor: pointer;
+}
 p, input, textarea {
     cursor: text;
 }
@@ -536,6 +540,7 @@ body {
     box-shadow: inset 0 0 10px rgb(228, 230, 55);
 }
 .orange {
+    
     border: solid 1px rgb(255, 177, 22);
     box-shadow: inset 0 0 10px rgb(255, 177, 22);
 }
@@ -547,6 +552,8 @@ body {
     align-items: center;
     justify-content: flex-start;
     padding-bottom: 150px;
+    width: 80%;
+    max-width: 95vw;
 }
 
 
@@ -579,6 +586,7 @@ body {
     text-align: center;
 }    
 .page-section-body {
+    margin-inline: auto;
     padding: 1rem;
     padding-top: 2rem;
     display: flex;
@@ -587,6 +595,7 @@ body {
     align-items: flex-start;
     justify-content: space-evenly;
     gap: 1rem;
+    width: 1100px;
     max-width: 100%;
     border-top: solid 3px rgb(7, 212, 255);
     border-top-left-radius: 1rem;
