--- a/public/style/main.css
+++ b/public/style/main.css
@@ -1,6 +1,8 @@
 /* SITE COLOR SCHEME */
 
-/* 
+/
+.test {
+
     color: rgb(221, 70, 176);
     color: rgb(218, 66, 69);
     color: rgb(68, 90, 254);
@@ -8,7 +10,7 @@
     color: rgb(228, 230, 55);
     color: rgb(255, 177, 22);
     color: rgb(65, 212, 50);
-
+}
 
     TURN INTO CSS VARIABLES --(red) etc.
 */
