--- a/public/style/main.css
+++ b/public/style/main.css
@@ -1,6 +1,6 @@
 /* SITE COLOR SCHEME */
 
-/
+
 .test {
 
     color: rgb(221, 70, 176);
@@ -12,8 +12,8 @@
     color: rgb(65, 212, 50);
 }
 
-    TURN INTO CSS VARIABLES --(red) etc.
-*/
+    /* TURN INTO CSS VARIABLES --(red) etc. */
+
 
 
 
@@ -85,6 +85,9 @@
     font-size: 1rem;
 }
 
+.abnes-font {
+    font-family: 'abnes';
+}
 .font-header-1 {
     font-size: 2rem;
     font-weight: 500;
@@ -555,6 +558,7 @@ body {
     width: 70vw;
     border-radius: 1rem;
     margin-inline: auto;
+    margin-bottom: 15rem;
     box-shadow: inset 0 0 20px rgba(7, 214, 255, 0.637);
     border-top: solid 2px rgba(7, 214, 255, 0.808);
     border-bottom: solid 2px rgba(7, 214, 255, 0.808);
