--- a/public/style/guide-book.css
+++ b/public/style/guide-book.css
@@ -764,7 +764,7 @@ body {
     border-top: solid 1px #fff;
     border-bottom: solid 1px #fff;
     border-radius: 0.5rem;
-    backdrop-filter: blur(8px);
+    backdrop-filter: blur(4px);
     margin-top: 0.5rem;
     display: flex;
     flex-direction: row;
@@ -772,8 +772,58 @@ body {
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    user-select: none;
+    pointer-events: none;
+}
+.icon-row::after {
+    content: '\2716';
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    padding: 0;
+    margin: 0;
+    background-color: rgba(255, 68, 0, 0.5);
+    backdrop-filter: blur(4px);
+    border: solid 1px orangered;
+    box-shadow: inset 0 0 10px orangered, inset 0 8px 12px #00000091;
+    text-shadow: 0 0 6px #000;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    pointer-events: all;
+    user-select: none;
 }
 .icon-row svg {
     margin-right: 1rem;
     scale: 1.5;
+}
+
+.hidden {
+    display: none;
+}
+#fullscreenToggle {
+    position: fixed;
+    bottom: 1rem;
+    left: 1rem;
+    width: 40px;
+    height: 40px;
+    background-color: rgba(0, 0, 0, 0.205);
+    box-shadow: 0 0 8px 1px rgba(135, 206, 250, 0.25), 0 10px 6px #0000007a;
+    border-radius: 0.5rem;
+    backdrop-filter: blur(4px);
+    border: solid 1px rgb(7, 212, 255);
+    /* border: solid 1px rgba(135, 206, 250, 0.25); */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 99999;
+}
+
+#fullscreenToggle img {
+    max-width: 100%;
+    max-height: 100%;
+    width: 30px;
+    height: 30px;
+    filter: drop-shadow(0 0 2px #000) grayscale(100%);
 }
