--- a/public/style/main.css
+++ b/public/style/main.css
@@ -744,3 +744,31 @@ body {
     list-style: none;
 }
 
+
+
+
+#fullscreenToggle {
+    position: fixed;
+    bottom: 1rem;
+    left: 1rem;
+    width: 40px;
+    height: 40px;
+    background-color: rgba(0, 0, 0, 0.205);
+    box-shadow: 0 0 8px 1px rgba(135, 206, 250, 0.25), 0 10px 6px #0000007a;
+    border-radius: 0.5rem;
+    backdrop-filter: blur(4px);
+    /* border: solid 1px #4767ac; */
+    border: solid 1px rgba(135, 206, 250, 0.25);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 99999;
+}
+
+#fullscreenToggle img {
+    max-width: 100%;
+    max-height: 100%;
+    width: 30px;
+    height: 30px;
+    filter: drop-shadow(0 0 2px #000) grayscale(100%);
+}
