--- a/public/style/guide-book.css
+++ b/public/style/guide-book.css
@@ -212,14 +212,14 @@ body {
     /* background-color: rgba(0, 0, 0, 0.5); */
 }
 .device-orientation-landscape {
-    background-color: rgba(0, 0, 0, 0.5);
+    /* background-color: rgba(0, 0, 0, 0.5); */
 }
 
 
 .site-header {
-    background-color: rgba(0, 0, 0, 0.5);
-    box-shadow: 0 10px 8px rgba(0, 0, 0, 0.25);
-    margin-bottom: 3rem;
+    /* background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: 0 10px 8px rgba(0, 0, 0, 0.25); */
+    margin-bottom: 7.5rem;
     padding: 1rem;
     border-radius: 2rem;
 }
@@ -578,6 +578,7 @@ body {
 }
 .page-section {
     width: calc(100% - 2rem);
+    margin-top: 5rem;
 }
 
 .page-section-header {
@@ -587,7 +588,8 @@ body {
 }    
 .page-section-body {
     margin-inline: auto;
-    padding: 1rem;
+    margin-top: 2rem;
+    padding: 2rem;
     padding-top: 2rem;
     display: flex;
     flex-direction: row;
@@ -602,7 +604,10 @@ body {
     border-top-right-radius: 1rem;
     backdrop-filter: blur(4px);
     position: relative;
-    
+    border-bottom: solid 3px rgb(7, 212, 255);
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    box-shadow: inset 0 10px 5px rgba(7, 214, 255, 0.15), inset 0 4px 2px rgba(7, 214, 255, 0.25), 0 -8px 6px rgba(7, 214, 255, 0.25);
 }
 
 .page-section-image, .page-section-video, .page-section-audio {
@@ -648,7 +653,7 @@ body {
     box-shadow: 0 0 5px rgb(221, 70, 176);
 }
 
-.page-section-body::after {
+.page-section-body::before {
     content: '';
     width: 100%;
     height: 20px;
@@ -752,12 +757,59 @@ body {
     list-style: none;
 }
 
+
+.spread-icon-list {
+    margin-top: 10rem;
+}
 #allIconsSelected {
     margin-top: 1.5rem;
     margin-bottom: 5rem;
     width: 90%;
 }
+.icon-color-options {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 1rem;
+    margin-top: 1rem;
+}
+.color-input {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 80%;
+}
+.icon-color-options input[type='color'] {
+    border-radius: 50%;
+    height: 40px;
+    width: 40px;
+    border: solid 1px rgb(7, 212, 255);
+    box-shadow: 0 0 12px rgb(7, 212, 255);
+    cursor: pointer;
+    outline: none;
+    -webkit-appearance: none;
+}
+.icon-color-options input[type='color']::-webkit-color-swatch-wrapper {
+    padding: 0;
+}
 
+.icon-color-options input[type='color']::-webkit-color-swatch {
+    border: none;
+    border-radius: 50%;
+}
+.color-input button {
+    outline: none;
+    border: none;
+    background-color: rgba(7, 214, 255, 0.5);
+    padding: 0.25rem;
+    border-radius: 0.5rem;
+    font-size: 1.25rem;
+    border: solid 1px #fff;
+    color: #fff;
+}
 .icon-row {
     padding: 0.5rem;
     text-align: left;
@@ -827,3 +879,6 @@ body {
     height: 30px;
     filter: drop-shadow(0 0 2px #000) grayscale(100%);
 }
+
+
+
