--- a/public/style/main.css
+++ b/public/style/main.css
@@ -182,11 +182,14 @@ body {
 
 
 .site-header {
-    background-color: rgba(0, 0, 0, 0.5);
-    box-shadow: 0 10px 8px rgba(0, 0, 0, 0.25);
+    background-color: #87cefa57;
+    box-shadow: inset 0 10px 8px rgba(0, 0, 0, 0.25);
     margin-bottom: 3rem;
     padding: 1rem;
+    padding-bottom: 0.5rem;
     border-radius: 2rem;
+    text-shadow: 0 0 3px lightskyblue, 0 0 1px #fff, 0 0 4px #000;
+    font-size: 1rem;
 }
 
 .site-link {
@@ -515,6 +518,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    width: 100%;
     padding-bottom: 150px;
 }
 
@@ -555,7 +559,7 @@ body {
     border: solid 1px #ffffff3b;
     backdrop-filter: blur(1px);
     padding: 2rem;
-    width: 70vw;
+    width: 100%;
     border-radius: 1rem;
     margin-inline: auto;
     margin-bottom: 15rem;
@@ -580,7 +584,7 @@ body {
     align-items: flex-start;
     justify-content: space-evenly;
     gap: 1rem;
-    max-width: 90%;
+    max-width: 100%;
     border: solid 1px #ffffff3b;
     border-top: solid 3px rgba(7, 214, 255, 0.808);
     border-bottom: solid 3px rgba(7, 214, 255, 0.808);
@@ -771,4 +775,353 @@ body {
     width: 30px;
     height: 30px;
     filter: drop-shadow(0 0 2px #000) grayscale(100%);
+}
+
+
+
+
+
+
+
+
+
+/* TABLES */
+
+*,
+*:before,
+*:after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-color: #1d1f20;
+    font-family: "Helvetica Neue", "Helvetica", Arial, sans-serif;
+}
+
+#wrapper {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+}
+
+#container {
+    float: left;
+    padding: 1em;
+    width: 100%;
+}
+
+ol.organizational-chart,
+ol.organizational-chart ol,
+ol.organizational-chart li,
+ol.organizational-chart li>div {
+    position: relative;
+}
+
+ol.organizational-chart,
+ol.organizational-chart ol {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+ol.organizational-chart {
+    text-align: center;
+    text-shadow: 0 0 3px lightskyblue;
+    color: #000000bb;
+    font-weight: bold;
+}
+
+ol.organizational-chart ol {
+    padding-top: 1em;
+}
+
+ol.organizational-chart ol:before,
+ol.organizational-chart ol:after,
+ol.organizational-chart li:before,
+ol.organizational-chart li:after,
+ol.organizational-chart>li>div:before,
+ol.organizational-chart>li>div:after {
+    background-color: rgba(135, 206, 250, 0.493);
+    content: "";
+    position: absolute;
+}
+
+ol.organizational-chart ol>li {
+    padding: 1em 0 0 1em;
+}
+
+ol.organizational-chart>li ol:before {
+    height: 1em;
+    left: 50%;
+    top: 0;
+    width: 3px;
+}
+
+ol.organizational-chart>li ol:after {
+    height: 3px;
+    left: 3px;
+    top: 1em;
+    width: 50%;
+}
+
+ol.organizational-chart>li ol>li:not(:last-of-type):before {
+    height: 3px;
+    left: 0;
+    top: 2em;
+    width: 1em;
+}
+
+ol.organizational-chart>li ol>li:not(:last-of-type):after {
+    height: 100%;
+    left: 0;
+    top: 0;
+    width: 3px;
+}
+
+ol.organizational-chart>li ol>li:last-of-type:before {
+    height: 3px;
+    left: 0;
+    top: 2em;
+    width: 1em;
+}
+
+ol.organizational-chart>li ol>li:last-of-type:after {
+    height: 2em;
+    left: 0;
+    top: 0;
+    width: 3px;
+}
+
+ol.organizational-chart li>div {
+    background-color: #00000081;
+    border-radius: 0.5rem;
+    backdrop-filter: blur(8px);
+    border: solid 1px lightskyblue;
+    box-shadow: 0 8px 12px #000, inset 0 0 12px lightskyblue;
+    min-height: 2em;
+    padding: 0.5em;
+
+}
+
+/*** PRIMARY ***/
+ol.organizational-chart>li>div {
+    background-color: rgba(135, 206, 250, 0.15);
+    backdrop-filter: blur(8px);
+    border-radius: 0.5rem;
+    backdrop-filter: blur(8px);
+    border: solid 1px lightskyblue;
+    box-shadow: 0 8px 12px #000, inset 0 0 12px lightskyblue;
+    margin-right: 1em;
+}
+
+ol.organizational-chart>li>div:before {
+    bottom: 2em;
+    height: 3px;
+    right: -1em;
+    width: 1em;
+}
+
+ol.organizational-chart>li>div:first-of-type:after {
+    bottom: 0;
+    height: 2em;
+    right: -1em;
+    width: 3px;
+}
+
+ol.organizational-chart>li>div+div {
+    margin-top: 1em;
+}
+
+ol.organizational-chart>li>div+div:after {
+    height: calc(100% + 1em);
+    right: -1em;
+    top: -1em;
+    width: 3px;
+}
+
+/*** SECONDARY ***/
+ol.organizational-chart>li>ol:before {
+    left: inherit;
+    right: 0;
+}
+
+ol.organizational-chart>li>ol:after {
+    left: 0;
+    width: 100%;
+}
+
+ol.organizational-chart>li>ol>li>div {
+    background-color: rgba(34, 83, 124, 0.473);
+    border-radius: 0.5rem;
+    backdrop-filter: blur(8px);
+    box-shadow: 0 8px 12px #000, inset 0 0 12px lightskyblue;
+    border: solid 1px lightskyblue;
+
+}
+
+/*** TERTIARY ***/
+ol.organizational-chart>li>ol>li>ol>li>div {
+    background-color: #ffffff83;
+    border-radius: 0.5rem;
+    backdrop-filter: blur(8px);
+    box-shadow: 0 8px 12px #000, inset 0 0 12px lightskyblue;
+    border: solid 1px lightskyblue;
+
+}
+
+/*** QUATERNARY ***/
+ol.organizational-chart>li>ol>li>ol>li>ol>li>div {
+    background-color: #aaaaaa85;
+    border-radius: 0.5rem;
+    backdrop-filter: blur(8px);
+    box-shadow: 0 8px 12px #000, inset 0 0 12px lightskyblue;
+    border: solid 1px lightskyblue;
+
+}
+
+/*** QUINARY ***/
+ol.organizational-chart>li>ol>li>ol>li>ol>li>ol>li>div {
+    background-color: #3333337c;
+    border-radius: 0.5rem;
+    backdrop-filter: blur(8px);
+    box-shadow: 0 8px 12px #000, inset 0 0 12px lightskyblue;
+    border: solid 1px lightskyblue;
+
+}
+
+
+/*** MEDIA QUERIES ***/
+@media only screen and (min-width: 64em) {
+    ol.organizational-chart {
+        margin-left: -1em;
+        margin-right: -1em;
+    }
+
+    /* PRIMARY */
+    ol.organizational-chart>li>div {
+        display: inline-block;
+        float: none;
+        margin: 0 1em 1em 1em;
+        vertical-align: bottom;
+    }
+
+    ol.organizational-chart>li>div:only-of-type {
+        margin-bottom: 0;
+        width: calc((100% / 1) - 2em - 4px);
+    }
+
+    ol.organizational-chart>li>div:first-of-type:nth-last-of-type(2),
+    ol.organizational-chart>li>div:first-of-type:nth-last-of-type(2)~div {
+        width: calc((100% / 2) - 2em - 4px);
+    }
+
+    ol.organizational-chart>li>div:first-of-type:nth-last-of-type(3),
+    ol.organizational-chart>li>div:first-of-type:nth-last-of-type(3)~div {
+        width: calc((100% / 3) - 2em - 4px);
+    }
+
+    ol.organizational-chart>li>div:first-of-type:nth-last-of-type(4),
+    ol.organizational-chart>li>div:first-of-type:nth-last-of-type(4)~div {
+        width: calc((100% / 4) - 2em - 4px);
+    }
+
+    ol.organizational-chart>li>div:first-of-type:nth-last-of-type(5),
+    ol.organizational-chart>li>div:first-of-type:nth-last-of-type(5)~div {
+        width: calc((100% / 5) - 2em - 4px);
+    }
+
+    ol.organizational-chart>li>div:before,
+    ol.organizational-chart>li>div:after {
+        bottom: -1em !important;
+        top: inherit !important;
+    }
+
+    ol.organizational-chart>li>div:before {
+        height: 1em !important;
+        left: 50% !important;
+        width: 3px !important;
+    }
+
+    ol.organizational-chart>li>div:only-of-type:after {
+        display: none;
+    }
+
+    ol.organizational-chart>li>div:first-of-type:not(:only-of-type):after,
+    ol.organizational-chart>li>div:last-of-type:not(:only-of-type):after {
+        bottom: -1em;
+        height: 3px;
+        width: calc(50% + 1em + 3px);
+    }
+
+    ol.organizational-chart>li>div:first-of-type:not(:only-of-type):after {
+        left: calc(50% + 3px);
+    }
+
+    ol.organizational-chart>li>div:last-of-type:not(:only-of-type):after {
+        left: calc(-1em - 3px);
+    }
+
+    ol.organizational-chart>li>div+div:not(:last-of-type):after {
+        height: 3px;
+        left: -2em;
+        width: calc(100% + 4em);
+    }
+
+    /* SECONDARY */
+    ol.organizational-chart>li>ol {
+        display: flex;
+        flex-wrap: nowrap;
+    }
+
+    ol.organizational-chart>li>ol:before,
+    ol.organizational-chart>li>ol>li:before {
+        height: 1em !important;
+        left: 50% !important;
+        top: 0 !important;
+        width: 3px !important;
+    }
+
+    ol.organizational-chart>li>ol:after {
+        display: none;
+    }
+
+    ol.organizational-chart>li>ol>li {
+        flex-grow: 1;
+        padding-left: 1em;
+        padding-right: 1em;
+        padding-top: 1em;
+    }
+
+    ol.organizational-chart>li>ol>li:only-of-type {
+        padding-top: 0;
+    }
+
+    ol.organizational-chart>li>ol>li:only-of-type:before,
+    ol.organizational-chart>li>ol>li:only-of-type:after {
+        display: none;
+    }
+
+    ol.organizational-chart>li>ol>li:first-of-type:not(:only-of-type):after,
+    ol.organizational-chart>li>ol>li:last-of-type:not(:only-of-type):after {
+        height: 3px;
+        top: 0;
+        width: 50%;
+    }
+
+    ol.organizational-chart>li>ol>li:first-of-type:not(:only-of-type):after {
+        left: 50%;
+    }
+
+    ol.organizational-chart>li>ol>li:last-of-type:not(:only-of-type):after {
+        left: 0;
+    }
+
+    ol.organizational-chart>li>ol>li+li:not(:last-of-type):after {
+        height: 3px;
+        left: 0;
+        top: 0;
+        width: 100%;
+    }
 }
