--- a/public/style/main.css
+++ b/public/style/main.css
@@ -143,7 +143,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    opacity: 0.5;
+    opacity: 0.25;
 }
 #coreContainerBackground img {
     max-width: 80%;
@@ -177,6 +177,9 @@ body {
 .device-orientation-portrait {
     /* background-color: rgba(255, 255, 255, 0.5); */
     /* background-color: rgba(0, 0, 0, 0.5); */
+    background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: inset 0 0 40px rgba(7, 214, 255, 0.25), 0 0 20px rgba(7, 214, 255, 0.25);
+    border-radius: 0.5rem;
 }
 .device-orientation-landscape {
     background-color: rgba(0, 0, 0, 0.5);
@@ -184,8 +187,9 @@ body {
 
 
 .site-header {
-    background-color: #87cefa57;
-    box-shadow: inset 0 10px 8px rgba(0, 0, 0, 0.25);
+    /* background-color: #87cefa57; */
+    background-image: linear-gradient(to bottom right, transparent, transparent, hsla(183, 84%, 47%, 0.125), #0c14145c 30%, hsla(183, 72%, 36%, 0.15), transparent);
+    box-shadow: inset 0 -15px 8px 4px rgba(0, 0, 0, 0.5), inset 0 15px 8px 4px rgba(0, 0, 0, 0.5), inset 0 0 3px rgba(7, 214, 255, 0.75), 0 0 6px rgba(7, 214, 255, 0.75);
     margin-bottom: 3rem;
     padding: 1rem;
     padding-bottom: 0.5rem;
@@ -557,7 +561,8 @@ body {
 }
 
 .page-section-header {
-    background: radial-gradient(circle, rgba(174, 233, 238, 0.5) 25%, rgba(148, 213, 233, 0.13) 100%);
+    /* background: radial-gradient(circle, rgba(174, 233, 238, 0.5) 25%, rgba(148, 213, 233, 0.13) 100%); */
+    background-image: linear-gradient(to bottom right, transparent, transparent, hsla(183, 84%, 47%, 0.125), #0c14145c 30%, hsla(183, 72%, 36%, 0.15), transparent);
     border: solid 1px #ffffff3b;
     backdrop-filter: blur(1px);
     padding: 2rem;
@@ -576,7 +581,8 @@ body {
     text-align: center;
 }    
 .page-section-body {
-    background: radial-gradient(circle, rgba(174, 233, 238, 0.5) 25%, rgba(148, 213, 233, 0.13) 100%);
+    /* background: radial-gradient(circle, rgba(174, 233, 238, 0.5) 25%, rgba(148, 213, 233, 0.13) 100%); */
+    background-image: linear-gradient(to bottom right, transparent, transparent, hsla(183, 84%, 47%, 0.125), #0c14145c 30%, hsla(183, 72%, 36%, 0.15), transparent);
     padding: 1.5rem;
     padding-top: 3rem;
     padding-bottom: 3rem;
@@ -769,14 +775,25 @@ body {
     align-items: center;
     justify-content: center;
     z-index: 99999;
+    opacity: 0.25;
+    transition: ease-in-out 300ms;
 }
+#fullscreenToggle:hover {
+    opacity: 0.75;
+}
+#fullscreenToggle:hover img {
+    opacity: 1;
+}
+
 
 #fullscreenToggle img {
     max-width: 100%;
     max-height: 100%;
     width: 30px;
     height: 30px;
-    filter: drop-shadow(0 0 2px #000) grayscale(100%);
+    filter: drop-shadow(0 0 2px #000);
+    opacity: 0.5;
+    transition: ease-in-out 650ms;
 }
 
 
