--- a/public/style/main.css
+++ b/public/style/main.css
@@ -74,9 +74,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    cursor: default;
+    /* cursor: default; */
     font-family: Readable;
-
 }
 
 .future-font {
@@ -149,6 +148,7 @@ body {
     max-width: 80%;
     max-height: 80%;
     filter: drop-shadow(0 0 10px rgb(7, 212, 255));
+    opacity: 0.4;
     /* filter: drop-shadow(0 24px 8px rgb(34, 77, 102)); */
 }
 #coreContainer {
@@ -179,10 +179,12 @@ body {
     /* background-color: rgba(0, 0, 0, 0.5); */
     background-color: rgba(0, 0, 0, 0.5);
     box-shadow: inset 0 0 40px rgba(7, 214, 255, 0.25), 0 0 20px rgba(7, 214, 255, 0.25);
+    box-shadow: inset 0 0 50px transparent;
     border-radius: 0.5rem;
 }
 .device-orientation-landscape {
     background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: inset 0 0 50px transparent;
 }
 
 
@@ -536,9 +538,11 @@ body {
     margin-bottom: 2rem;
 }
 .page-title {
+    margin-top: 2rem;
 }
 .page-title h1 {
     font-size: 1.75rem;
+    font-size: 3rem;
     text-align: center;
 }
 .page-title h2 {
